test/files/neg/t1477.check
t1477.scala:13: error: overriding type V <: Middle.this.D (defined in trait C);
 type V <: Middle.this.D with Middle.this.U is a volatile type; cannot override a type with non-volatile upper bound
    type V <: (D with U)
         ^
one error found
